tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0276/input.js
class A {static static static(){}}
